primeira etapa html/home concluída

--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <!-- fonte awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- css principal -->
+     <link rel="stylesheet" href="style.css" >
+    <title>Victor Hugo Vicente</title>
 </head>
 <body>
-    <h1>Olá Mundo !</h1>
+    <header class="header">
+        <a href="#" class="logo">victorhvicente</a>
+
+        <i class="fa-solid fa-bars" id="menu-icon"></i>
+
+        <nav class="navbar">
+
+            <ol>
+                <li><a href="inicio" class="">Início</a></li>
+                <li><a href="inicio" class="">Início</a></li>
+                <li><a href="projetos" class="">Projetos</a></li>
+            </ol>
+        </nav>
+    </header>
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello World</h3>
+            <h1>Victor Hugo Vicente</h1>
+            <p>Estudante de Análise e Desenvolvimento na Fatec de Presidente Prudente - SP</p>
+        
+            <div class="social-media">
+                <ol>
+                    <li><a href="#" class="active"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#" class="active"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="#" class="active"><i class="fa-brands fa-github"></i></a></li>
+                </ol>
+            </div>
+            <a href="#" class="btn">Download Curriculo</a>
+        </div>
+
+        <div class="home-img">
+            <img src="img/fotoperfil.jpeg" alt>
+        </div>
+    </section>
 </body>
 </html>
