--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
 
             <ol>
-                <li><a href="inicio" class="">Início</a></li>
+                <li><a href="inicio" class="active">Início</a></li>
                 <li><a href="inicio" class="">Início</a></li>
                 <li><a href="projetos" class="">Projetos</a></li>
             </ol>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="home-img">
-            <img src="img/fotoperfil.jpeg" alt>
+            <img src="img/fotoperfil.jpeg" alt="">
         </div>
     </section>
 </body>
