--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello World</h3>
+            <h3>Hello, World !</h3>
             <h1>Victor Hugo Vicente</h1>
             <p>Estudante de Análise e Desenvolvimento na Fatec de Presidente Prudente - SP</p>
         
