atualização html tag p

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="home-content">
             <h3>Hello, World !</h3>
             <h1>Victor Hugo Vicente</h1>
-            <p>Estudante de Análise e Desenvolvimento na Fatec de Presidente Prudente - SP</p>
+            <p>Estudante de Análise e Desenvolvimento de Sistemas na Fatec de Presidente Prudente - SP</p>
         
             <div class="social-media">
                 <ol>
