--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <ol>
                 <li><a href="inicio" class="active">Início</a></li>
-                <li><a href="inicio" class="">Início</a></li>
+                <li><a href="sobre" class="">Sobre</a></li>
                 <li><a href="projetos" class="">Projetos</a></li>
             </ol>
         </nav>
