salvando mudanças locais antes do pull

--- a/index.html
+++ b/index.html
@@ -46,5 +46,22 @@
             <img src="img/fotoperfil.jpeg" alt="">
         </div>
     </section>
+
+    <section class="sobre" id="sobre">
+        <div>
+            <img src="img/fotoperfil2.jpeg" alt="">
+        </div>
+
+        <div class="sobre-content">
+            <h2 class="cabecalho">SOBRE <span>MIM</span></h2>
+            <p>Olá! Meu nome é Victor Hugo e sou estudante do último semestre de Análise e Desenvolvimento de Sistemas. Tenho paixão por tecnologia, resolução de problemas e otimização de sistemas.
+            </p>
+            <p>Meu sonho é construir uma carreira na área de tecnologia e acredito que, com cada experiência, é possível desenvolver uma trajetória sólida. Tenho um forte interesse em atuar como Desenvolvedor Full Stack e busco aprimorar minhas habilidades diariamente.
+            </p>
+            <p>Sou uma pessoa que tem facilidade para trabalhar em equipe, gosto de ouvir ideias e contribuir com sugestões para encontrar as melhores soluções. Estou sempre em busca de novos desafios que me permitam crescer profissionalmente e agregar valor aos projetos em que me envolvo.</p>
+            <p>Se quiser saber mais sobre meu trabalho ou trocar ideias, fique à vontade para entrar em contato! 🚀</p>
+            <a href="#" class="btn">Leia mais</a>
+        </div>
+    </section>
 </body>
 </html>
