Section projetos adicionado

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav class="navbar">
 
             <ol>
-                <li><a href="inicio" class="active">Início</a></li>
-                <li><a href="sobre" class="">Sobre</a></li>
-                <li><a href="projetos" class="">Projetos</a></li>
+                <li><a href="#inicio" class="active">Início</a></li>
+                <li><a href="#sobre" class="">Sobre</a></li>
+                <li><a href="#projetos" class="">Projetos</a></li>
             </ol>
         </nav>
     </header>
@@ -60,7 +60,32 @@
             </p>
             <p>Sou uma pessoa que tem facilidade para trabalhar em equipe, gosto de ouvir ideias e contribuir com sugestões para encontrar as melhores soluções. Estou sempre em busca de novos desafios que me permitam crescer profissionalmente e agregar valor aos projetos em que me envolvo.</p>
             <p>Se quiser saber mais sobre meu trabalho ou trocar ideias, fique à vontade para entrar em contato! 🚀</p>
-            <a href="#" class="btn">Leia mais</a>
+            <!-- <a href="#" class="btn">Leia mais</a> -->
+        </div>
+    </section>
+
+    <section class="projetos" id="projetos">
+        <h2>Projetos</h2>
+        <p>Alguns projetos desenvolvidos durante minha jornada na faculdade.</p>
+        <div class="projetos-container">
+            <div class="projetos-caixa">
+                <img src="img/print.jpg" alt="">
+                <div class="projetos-camada">
+                    <h4>Aplicativo Quiz</h4>
+                    <p>Sistema desenvolvido com HTML, CSS e JavaScript</p>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="projetos-caixa">
+                <img src="img/print.jpg" alt="">
+                <div class="projetos-camada">
+                    <h4>Aplicativo Quiz</h4>
+                    <p>Sistema desenvolvido com HTML, CSS e JavaScript</p>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+
         </div>
     </section>
 </body>
